# Btrfs-Manager

./: .gitignore  .gitleaks.toml  .jscpd.json  Cargo.toml  README.md  clippy.toml  deny.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  mutation.yml
config/: btrfs-manager.example.toml
crates/app/: Cargo.toml
crates/app/src/: dbus_client.rs  gui.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: compare.rs  lib.rs  models.rs  parser.rs  paths.rs  retention.rs  rollback.rs
crates/helper/: Cargo.toml
crates/helper/src/: dbus.rs  lib.rs  main.rs  state.rs
docs/: architecture.md  continuous-quality.md  product-roadmap.md  technical-documentation.html
migrations/: 0001_state.sql
packaging/arch/: .SRCINFO  PKGBUILD  btrfs-manager-git.install
packaging/dbus/: org.btrfsmanager.Helper.conf  org.btrfsmanager.Helper.service
packaging/linux/: org.btrfsmanager.App.desktop
packaging/polkit/: org.btrfsmanager.helper.policy
packaging/systemd/: btrfs-manager-helper.service  btrfs-manager-snapshot@.service  btrfs-manager-snapshot@.timer
po/: en.json  pt_BR.json
quality/: baseline.json
scripts/: check-gui-privilege-boundary.sh  check-installed-dbus-helper.sh  copy-last-screenshot  dev-gui-sandbox.sh  dev-install.sh  dev-loopback-btrfs-test.sh  e2e-headless-smoke.sh  github-bootstrap.sh  quality-gate.py  vm-arch-bootstrap.sh  vm-root-rollback-e2e.sh
