[workspace]
members = [
    "crates/core",
    "crates/helper",
    "crates/app",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://example.invalid/btrfs-manager"
rust-version = "1.87"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.11", features = ["serde", "v4"] }
zbus = { version = "5.15", features = ["tokio"] }
rusqlite = { version = "0.32", features = ["bundled"] }
